[metadata]
name = loggerXio
version = 1.0.0
author = Arise
author_email = arise.wxxoxo@gmail.com
description = Telegram-Powered Python Logger - Send Logs & print() Output Straight to Your Chat in Real Time!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wxxoxo/loggerXio
license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Logging
    Topic :: Utilities
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Communications
    Topic :: Communications :: Chat
    Topic :: System :: Monitoring
    Topic :: System :: Logging

project_urls =
    Documentation = https://github.com/wxxoxo/loggerXio#readme
    Source = https://github.com/wxxoxo/loggerXio
    Support = https://t.me/wxxoxo

keywords =
    telegram, telebot, pytelegrambotapi, logger, logging, log, logs,
    python-logger, python-logging, python-log, real-time, realtime,
    live-logging, live-logger, telegram-logger, telegram-logging,
    chat-logger, chat-logging, bot-logger, bot-logging,
    monitoring, monitor, remote-logging, remote-logger,
    print-capture, capture-print, capture-output,
    sysout, stderr, stdout,
    debugging, debug, debug-tool, debug-logger,
    system-logger, application-logger,
    python-bot, telegram-bot,
    automation, automation-logger,
    notification, notify, error-notify,
    error-logging, error-logger,
    dev-tools, developer-tools, developer-logger,
    python-tools, python-debugging

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyTelegramBotAPI>=4.0.0
include_package_data = True
zip_safe = False
