[metadata]
name = loggerXio
version = 1.0.7
author = Arise
author_email = arise.wxxoxo@gmail.com
description = Telegram-Powered Python Logger - Send Logs & print() Output Straight to Your Chat in Real Time!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wxxoxo/loggerXio
license = MIT
license_files = LICENSE

project_urls =
    Documentation = https://github.com/wxxoxo/loggerXio#readme
    Source = https://github.com/wxxoxo/loggerXio
    Support = https://t.me/wxxoxo

keywords =
    telegram, telebot, pytelegrambotapi, logger, logging, log, logs,
    python-logger, python-logging, python-log, real-time, realtime,
    live-logging, live-logger, telegram-logger, telegram-logging,
    chat-logger, chat-logging, bot-logger, bot-logging,
    monitoring, monitor, remote-logging, remote-logger,
    print-capture, capture-print, capture-output,
    sysout, stderr, stdout,
    debugging, debug, debug-tool, debug-logger,
    system-logger, application-logger,
    python-bot, telegram-bot,
    automation, automation-logger,
    notification, notify, error-notify,
    error-logging, error-logger,
    dev-tools, developer-tools, developer-logger,
    python-tools, python-debugging

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyTelegramBotAPI>=4.0.0
include_package_data = True
zip_safe = False
